Update .gitignore file (blogs)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 smartbit/application-build/api/.env
-
 smartbit/application-build/api/node_modules/
 smartbit/application-build/api/postgresdata/
 smartbit/application-build/api/.vscode/
@@ -8,3 +7,5 @@ smartbit/application-build/api/__tests__/coverage/
 smartbit/application-build/api/__tests__/database.sqlite
 smartbit/application-build/api/dist/
 smartbit/application-build/api/build/
+
+smartbit/smartbit-apps/logs
