--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ smartbit/smartbit-apps/resources/libs/__pycache__/
 smartbit/smartbit-apps/resources/libs/Database.py
 smartbit/smartbit-apps/tests/temp.html
 smartbit/smartbit-apps/resources/libs/__pycache__/Account.cpython-310.pyc
+smartbit/smartbit-apps/tests/temp2.html
+smartbit/smartbit-apps/tests/temp3.html
