Configuring to local database with docker

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ smartbit/smartbit-apps/tests/temp.html
 smartbit/smartbit-apps/resources/libs/__pycache__/Account.cpython-310.pyc
 smartbit/smartbit-apps/tests/temp2.html
 smartbit/smartbit-apps/tests/temp3.html
+smartbit/application-build/docker-compose.yaml
