Update web environment, create query insert membership and update parameters in test case membership

--- a/smartbit/application-build/api/.env
+++ b/smartbit/application-build/api/.env
@@ -6,10 +6,10 @@ APP_NAME=smartbit-api
 
 # Database
 DB_DIALECT=postgres
-DB_HOST=?????
-DB_NAME=?????
-DB_USER=?????
-DB_PASS=??????
+DB_HOST=localhost
+DB_NAME=smartbit
+DB_USER=postgres
+DB_PASS=QAx@123
 DB_PORT=5432
 
 # Não mexer aqui
