Setting mobile project Smartbit Android

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ smartbit/smartbit-apps/resources/libs/__pycache__/Account.cpython-310.pyc
 smartbit/smartbit-apps/tests/temp2.html
 smartbit/smartbit-apps/tests/temp3.html
 smartbit/application-build/docker-compose.yaml
+smartbit/smartbit-apps/mobile/node_modules/
