Implmenting test case 'Should loggIn with CPF and Id' for mobile

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ smartbit/smartbit-apps/tests/temp2.html
 smartbit/smartbit-apps/tests/temp3.html
 smartbit/application-build/docker-compose.yaml
 smartbit/smartbit-apps/mobile/node_modules/
+smartbit/smartbit-apps/mobile/logs/
