--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ smartbit/smartbit-apps/tests/temp3.html
 smartbit/application-build/docker-compose.yaml
 smartbit/smartbit-apps/mobile/node_modules/
 smartbit/smartbit-apps/mobile/logs/
+smartbit/smartbit-apps/libs/__pycache__/
+smartbit/smartbit-apps/services/logs/
+smartbit/smartbit-apps/libs/__pycache__/Database.cpython-310.pyc
