Writting README.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,1 @@
-smartbit/application-build/api/.env
-smartbit/application-build/api/node_modules/
-smartbit/application-build/api/postgresdata/
-smartbit/application-build/api/.vscode/
-smartbit/application-build/api/tmp/uploads/
-smartbit/application-build/api/__tests__/coverage/
-smartbit/application-build/api/__tests__/database.sqlite
-smartbit/application-build/api/dist/
-smartbit/application-build/api/build/
-
-smartbit/smartbit-apps/logs
-smartbit/smartbit-apps/resources/libs/__pycache__/
-smartbit/smartbit-apps/resources/libs/Database.py
-smartbit/smartbit-apps/tests/temp.html
-smartbit/smartbit-apps/resources/libs/__pycache__/Account.cpython-310.pyc
-smartbit/smartbit-apps/tests/temp2.html
-smartbit/smartbit-apps/tests/temp3.html
-smartbit/application-build/docker-compose.yaml
-smartbit/smartbit-apps/mobile/node_modules/
-smartbit/smartbit-apps/mobile/logs/
-smartbit/smartbit-apps/libs/__pycache__/
-smartbit/smartbit-apps/services/logs/
-smartbit/smartbit-apps/libs/__pycache__/Database.cpython-310.pyc
-smartbit/smartbit-apps/web/logs/
-smartbit/smartbit-apps/libs/__pycache__/Account.cpython-310.pyc
+smartbit/application-build/api/dist/app/validators/MembershipCreateValidator.js
